--- a/cours/circuits/fiche.tex
+++ b/cours/circuits/fiche.tex
@@ -19,6 +19,8 @@
 \maketitle
 Norton/Thévenin : G/R src. ind. off \& J/V en CO/CC
 
+$Z_{th}$ on ajoute soit une source de courant et on regarde la tension, soit une source de tension et on regarde le courant
+
 $s(t)= \cfrac{a_0}{2} + \sum_{n=1}^{\infty}{\left( a_n \cos\left(n\omega t\right) + b_n \sin\left(n \omega t \right) \right)}$
 
 $a_n = \cfrac{2}{T} \int \limits_{-T/2}^{T/2}{s(t)\cos\left(n\omega t\right) dt}$
@@ -52,6 +54,10 @@ quadripoles chaine : produit des A
 quadripoles série : somme des Z
 
 quadripoles parallèle : somme des Y
+
+$T_v = \cfrac{Z_u Z_{21}}{Z_e(Z_{22}+Z_u)}$
+
+$T_i = \cfrac{Z_21}{Z_{22}+Z_u}$
 
 $f(t)u(t) \rightarrow F(p)$
 
@@ -109,6 +115,10 @@ $F(p) = \cfrac{A}{p-a} + \cfrac{B}{p-b} + \cfrac{C}{p-c} \rightarrow f(t) = Ae^{
 energie : $E = \int \limits_{-\infty}^{+\infty} x^2(t)dt$
 
 
+\newpage
+
+\includegraphics[width=16cm]{tableau.jpg}
+\includegraphics[width=16cm]{../trigo/trigo1.jpg}
 
 
 
