test du correcteur orthographique de vim

--- a/be/diode_15A/rapport.tex
+++ b/be/diode_15A/rapport.tex
@@ -131,7 +131,7 @@
 
   AN : $f_c = 6.34\cdot 10^7Hz$
 
-  Afin que la diode puisse fonctionner à plus haute fréquence, il est possible de diminuer la taille de la diode (mais on réduit alors sa rérsistance mécanique), ce qui aura pour effet d'augmenter $f_c$.
+  Afin que la diode puisse fonctionner à plus haute fréquence, il est possible de diminuer la taille de la diode (mais on réduit alors sa résistance mécanique), ce qui aura pour effet d'augmenter $f_c$.
 
   On peut aussi diminuer le dopage ou changer de semi-conducteur afin d'augmenter la mobilité des porteurs.
 
