légères modifications pour faciliter la compilation

--- a/td/C_1A/miniprojet/rapport/rapport.tex
+++ b/td/C_1A/miniprojet/rapport/rapport.tex
@@ -18,7 +18,7 @@
 \setmonofont{DejaVu Sans Mono}
 \defaultfontfeatures{Mapping=tex-text,Scale=MatchLowercase}
 
-\title{\includegraphics{images/inp-enseeiht} \\ ~ \\ ~ \\ ~ \\ ~ \\ Miniprojet d'Algorithmique et méthodes de programmation}
+\title{\includegraphics{/home/nim/images/inp-enseeiht} \\ ~ \\ ~ \\ ~ \\ ~ \\ Miniprojet d'Algorithmique et méthodes de programmation}
 \author{Jimmy Hester, Guilhem Saurel}
 \date{\oldstylenums{\today}}
 
