correction d’un lien

--- a/cours/filtrage/fiche.tex
+++ b/cours/filtrage/fiche.tex
@@ -246,6 +246,6 @@ $n=\cfrac{ch^{-1}(K)}{ch^{-1}(x_2)};x_2=\cfrac{\Omega_2}{\Omega_1};K\epsilon=\sq
 
 \end{multicols}
 
-\includegraphics[height=13cm]{trigo}
+\includegraphics[height=13cm]{../trigo/trigo}
 
 \end{document}
