--- a/TP/matlab_15A/un/rapport.tex
+++ b/TP/matlab_15A/un/rapport.tex
@@ -19,7 +19,7 @@
 \usepackage{amsmath}
 \usepackage{minted}
 \usepackage{multicol}
-\title{\includegraphics{inp-enseeiht} \\ ~ \\ ~ \\ ~ \\ ~ \\ Exercices de Matlab \\ Première séance : mode interactif }
+\title{\includegraphics{../../../../images/inp-enseeiht} \\ ~ \\ ~ \\ ~ \\ ~ \\ Exercices de Matlab \\ Première séance : mode interactif }
 \author{Guilhem Saurel}
 \date{\today}
 \renewcommand{\thesubsection}{\thesection .\Alph{subsection}}
