--- a/be/diode_15A/rapport.tex
+++ b/be/diode_15A/rapport.tex
@@ -19,7 +19,7 @@
 \usepackage{amsmath}
 \usepackage{minted}
 \usepackage{multicol}
-\title{\includegraphics{inp-enseeiht} \\ ~ \\ ~ \\ ~ \\ ~ \\ BE Jonction PN}
+\title{\includegraphics{../../../images/inp-enseeiht} \\ ~ \\ ~ \\ ~ \\ ~ \\ BE Jonction PN}
 \author{Ken Hasselmann, Guilhem Saurel}
 \date{\oldstylenums{\today}}
 \begin{document}
