--- a/be/fh_1A/rapport.tex
+++ b/be/fh_1A/rapport.tex
@@ -40,7 +40,7 @@
 
 \renewcommand{\thesection}{\thechapter .\alph{section}}
 
-\title{\includegraphics{images/inp-enseeiht} \\ ~ \\ ~ \\ ~ \\ ~ \\ BE Fonction Hyperfréquences}
+\title{\includegraphics{../../../images/inp-enseeiht} \\ ~ \\ ~ \\ ~ \\ ~ \\ BE Fonction Hyperfréquences}
 \author{Florian Kempenich, Guilhem Saurel}
 \date{\oldstylenums{Vendredi 20 mai 2011}}
 
