--- a/mini_projets/analogique_1A/Rapport_final.tex
+++ b/mini_projets/analogique_1A/Rapport_final.tex
@@ -16,7 +16,7 @@
 \usepackage{schemabloc}
 \usepackage{pgfplots}
 
-\title{\includegraphics{images/inp-enseeiht} \\ ~ \\ ~ \\ ~ \\ ~ \\ Mini Projet Électronique Linéaire \\ ~ \\ \large{Réalisation d'un amplificateur de tension - rapport final}}
+\title{\includegraphics{../../../images/inp-enseeiht} \\ ~ \\ ~ \\ ~ \\ ~ \\ Mini Projet Électronique Linéaire \\ ~ \\ \large{Réalisation d'un amplificateur de tension - rapport final}}
 \author{Mathieu Morino, Guilhem Saurel}
 \date{\oldstylenums{\today}}
 
