--- a/mini_projets/analogique_1A/rapport.tex
+++ b/mini_projets/analogique_1A/rapport.tex
@@ -15,7 +15,7 @@
 \usepackage{siunitx}
 \usepackage{schemabloc}
 
-\title{\includegraphics{images/inp-enseeiht} \\ ~ \\ ~ \\ ~ \\ ~ \\ Mini Projet Électronique Linéaire \\ ~ \\ \large{Réalisation d'un amplificateur de tension}}
+\title{\includegraphics{../../../images/inp-enseeiht} \\ ~ \\ ~ \\ ~ \\ ~ \\ Mini Projet Électronique Linéaire \\ ~ \\ \large{Réalisation d'un amplificateur de tension}}
 \author{Mathieu Morino, Guilhem Saurel}
 \date{\oldstylenums{\today}}
 
