--- a/présentations/applications_de_l_electronique_1A/presentation.tex
+++ b/présentations/applications_de_l_electronique_1A/presentation.tex
@@ -22,7 +22,7 @@
 \author{Guilhem Saurel}
 \institute{ENSEEIHT}
 \date{\today}
-\logo{\includegraphics[height=0.5cm]{images/inp-enseeiht}}
+\logo{\includegraphics[height=0.5cm]{../../../images/inp-enseeiht}}
 
 \begin{document}
 
