--- a/stages/rapport.tex
+++ b/stages/rapport.tex
@@ -8,7 +8,7 @@
 \usepackage{url,hyperref}
 \usepackage{soul}
 \setmainfont{DejaVu Sans}
-\title{\textbf{Rapport de stage de première année} \\~\\~\\ \includegraphics{inp-enseeiht} \\~\\~\\~\\~\\~\\Magenta Event \\~\\~\\~\\~\\~\\~\\~\\~\\~\\~\\}
+\title{\textbf{Rapport de stage de première année} \\~\\~\\ \includegraphics{../../images/inp-enseeiht} \\~\\~\\~\\~\\~\\Magenta Event \\~\\~\\~\\~\\~\\~\\~\\~\\~\\~\\}
 \author{Guilhem Saurel}
 \begin{document}
  \setcounter{page}{0}
