--- a/td/C_15A/mini-projet_un/rapport/rapport.tex
+++ b/td/C_15A/mini-projet_un/rapport/rapport.tex
@@ -12,7 +12,7 @@
 \usepackage{graphicx}
 \usepackage{amsmath}
 \usepackage{minted}
-\title{\includegraphics{inp-enseeiht} \\ ~ \\ ~ \\ ~ \\ ~ \\ Mini Projet C }
+\title{\includegraphics{../../../../../images/inp-enseeiht} \\ ~ \\ ~ \\ ~ \\ ~ \\ Mini Projet C }
 \author{Guilhem Saurel}
 \date{\today}
 \begin{document}
