--- a/td/com_1A/presentation.tex
+++ b/td/com_1A/presentation.tex
@@ -15,7 +15,7 @@
 \author{Guilhem Saurel}
 \institute{ENSEEIHT}
 \date{\oldstylenums{\today}}
-\logo{\includegraphics[height=0.5cm]{inp-enseeiht}}
+\logo{\includegraphics[height=0.5cm]{../../../images/inp-enseeiht}}
 
 \begin{document}
 
