--- a/TP/matlab_15A/deux/rapport.tex
+++ b/TP/matlab_15A/deux/rapport.tex
@@ -20,7 +20,7 @@
 %\usepackage{amsmath}
 \usepackage{minted}
 %\usepackage{multicol}
-\title{\includegraphics{inp-enseeiht} \\ ~ \\ ~ \\ ~ \\ ~ \\ Exercices de Matlab \\ Seconde séance : Graphiques 2D \& 3D }
+\title{\includegraphics{../../../../images/inp-enseeiht} \\ ~ \\ ~ \\ ~ \\ ~ \\ Exercices de Matlab \\ Seconde séance : Graphiques 2D \& 3D }
 \author{Guilhem Saurel}
 \date{\today}
 \renewcommand{\thesubsection}{\thesection .\Alph{subsection}}
