--- a/TP/matlab_15A/quatre/rapport.tex
+++ b/TP/matlab_15A/quatre/rapport.tex
@@ -20,7 +20,7 @@
 \usepackage{amsmath}
 \usepackage{minted}
 %\usepackage{multicol}
-\title{\includegraphics{inp-enseeiht} \\ ~ \\ ~ \\ ~ \\ ~ \\ Exercices de Matlab \\ ~ \\ Quatrième séance \\ ~ \\ Exercices de SIMULINK}
+\title{\includegraphics{../../../../images/inp-enseeiht} \\ ~ \\ ~ \\ ~ \\ ~ \\ Exercices de Matlab \\ ~ \\ Quatrième séance \\ ~ \\ Exercices de SIMULINK}
 \author{Guilhem Saurel}
 \date{\today}
 \renewcommand{\thesubsection}{\thesection .\Alph{subsection}}
