--- a/TP/matlab_15A/trois/rapport.tex
+++ b/TP/matlab_15A/trois/rapport.tex
@@ -20,7 +20,7 @@
 %\usepackage{amsmath}
 \usepackage{minted}
 %\usepackage{multicol}
-\title{\includegraphics{inp-enseeiht} \\ ~ \\ ~ \\ ~ \\ ~ \\ Exercices de Matlab \\ ~ \\ Troisième séance \\ ~  \\ Structures de Contrôle \\ Équations différentielles Ordisnaires}
+\title{\includegraphics{../../../../images/inp-enseeiht} \\ ~ \\ ~ \\ ~ \\ ~ \\ Exercices de Matlab \\ ~ \\ Troisième séance \\ ~  \\ Structures de Contrôle \\ Équations différentielles Ordisnaires}
 \author{Guilhem Saurel}
 \date{\today}
 \renewcommand{\thesubsection}{\thesection .\Alph{subsection}}
