--- a/be/mos_15A/rapport.tex
+++ b/be/mos_15A/rapport.tex
@@ -19,7 +19,7 @@
 \usepackage{amsmath}
 \usepackage{minted}
 \usepackage{multicol}
-\title{\includegraphics{inp-enseeiht} \\ ~ \\ ~ \\ ~ \\ ~ \\ BE Transistors MOS}
+\title{\includegraphics{../../../images/inp-enseeiht} \\ ~ \\ ~ \\ ~ \\ ~ \\ BE Transistors MOS}
 \author{Ken Hasselmann, Guilhem Saurel}
 \date{\today}
 \begin{document}
